<resources>
    <string name="app_name">AstroNut</string>
    <string name="images_of_the_quiz">Images of the Quiz</string>
    <string name="try_again">Try again</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="highest_score">Highest score:</string>
    <string name="divide_line">_________________</string>
    <string name="your_score">Your score:</string>
    <string name="play_game">Play A New Game</string>
    <string name="general_options">General Options</string>
    <string name="enter_name">Enter A Name</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="background_music">Background Music</string>
    <string name="your_final_score">Your Score: </string>
    <string name="high_score">High Score: </string>
    <string name="new_high_score">New High Score: </string>
    <string name="share">Share</string>
</resources>
