<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background"
    tools:context="co.dev.rsp.astronut.SettingActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="124dp" />

    <TextView

        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_options"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide_line"
        android:textColor="@android:color/white" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:text="@string/enter_name"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/userNameText"
            android:layout_width="239dp"
            android:layout_height="69dp"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:inputType="textPersonName"
            android:labelFor="@+id/userNameText"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:columnCount="2"
        android:rowCount="1">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:onClick="onSave"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:onClick="onReset"
            android:text="@string/reset" />

    </GridLayout>

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />
</LinearLayout>